--- a/index.html
+++ b/index.html
@@ -32,13 +32,17 @@ Los Angeles, California</p>
 <p><a href="https://www.ucpress.edu/book/9780520343498/"><em>Reason and Revelation in Byzantine Antioch: The Christian Translation Program of Abdallah ibn al-Fadl</em></a>, Berkeley Series in Postclassical Islamic Scholarship 3 (University of California Press, 2020). [<a href="https://content.ucpress.edu/title/9780520343498/9780520343498_intro.pdf">excerpt</a>]</p>
 <h2 id="articles-and-book-chapters">Articles and Book Chapters</h2>
 <h3 id="forthcoming">forthcoming</h3>
+<p>“Byzantine Engagement with Islamicate Alchemy.”</p>
+<blockquote>
+<p><em>Isis: A Journal of the History of Science Society</em> (forthcoming).</p>
+</blockquote>
 <p>“Heretics, Dissidents, and Society: Narrating the Trial of John bar ʿAbdun.”</p>
 <blockquote>
-<p><em>Dumbarton Oaks Papers</em> 76 (accepted November 2021; expected to appear in 2022).</p>
+<p><em>Dumbarton Oaks Papers</em> 76 (forthcoming 2022).</p>
 </blockquote>
 <p>“Islamicate Alchemy in Greek Letters on the First Page of <em>Marcianus graecus</em> 299.”</p>
 <blockquote>
-<p><em>Byzantinische Zeitschrift</em> 115.1 (accepted November 2021; expected to appear April 2022).</p>
+<p><em>Byzantinische Zeitschrift</em> 115.1 (forthcoming April 2022).</p>
 </blockquote>
 <p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of Chioniades on John of Damascus.”</p>
 <blockquote>
@@ -89,7 +93,7 @@ Los Angeles, California</p>
 <h2 id="encyclopedia-entries">Encyclopedia entries</h2>
 <p>“Basileios von Emesa”; “Theophilos von Edessa.”</p>
 <blockquote>
-<p><em>Lexikon byzantinischer Autoren</em>, ed. A. Riehle and M. Grünbart (Berlin: Akademie Verlag, forthcoming).</p>
+<p>In <em>Lexikon byzantinischer Autoren</em>, ed. A. Riehle and M. Grünbart (Berlin: Akademie Verlag, forthcoming).</p>
 </blockquote>
 <h2 id="book-reviews">Book Reviews</h2>
 <p>Andrea De Giorgi, <em>Ancient Antioch from the Seleucid Era to the Islamic Conquest</em> (Cambridge University Press, 2016).</p>
@@ -101,6 +105,6 @@ Los Angeles, California</p>
 <p>“In Mecca’s Backyard,” <em>Marginalia Review of Books</em>, April 29, 2014. [<a href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open</a>]</p>
 </blockquote>
 <hr />
-<p><small>[<em>Last updated November 2021.</em>]</small></p>
+<p><small>[<em>Last updated January 2022.</em>]</small></p>
 </body>
 </html>
