--- a/index.html
+++ b/index.html
@@ -23,86 +23,140 @@
 <header id="title-block-header">
 <h1 class="title">Alexandre M. Roberts</h1>
 </header>
-<p>Assistant Professor of Classics<br />
+<p>Associate Professor of Classics<br />
 University of Southern California<br />
 Los Angeles, California</p>
-<p>[ <a href="http://dornsife.usc.edu/cf/clas/clas_faculty_display.cfm?Person_ID=1081060">faculty page</a> | <a href="https://hcommons.org/members/amroberts/">hcommons</a> | <a href="https://zenodo.org/communities/amroberts/search?page=1&amp;size=20">zenodo</a> | <!-- <a itemprop="sameAs" content="https://orcid.org/0000-0002-6648-5392" href="https://orcid.org/0000-0002-6648-5392" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:.7em;margin-right:.5em;" alt="✺">orcid</a> --> <a href="https://orcid.org/0000-0002-6648-5392">orcid</a> ]</p>
+<p>[ <a
+href="http://dornsife.usc.edu/cf/clas/clas_faculty_display.cfm?Person_ID=1081060">faculty
+page</a> | <a
+href="https://hcommons.org/members/amroberts/">hcommons</a> | <a
+href="https://zenodo.org/communities/amroberts/search?page=1&amp;size=20">zenodo</a>
+|
+<!-- <a itemprop="sameAs" content="https://orcid.org/0000-0002-6648-5392" href="https://orcid.org/0000-0002-6648-5392" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:.7em;margin-right:.5em;" alt="✺">orcid</a> -->
+<a href="https://orcid.org/0000-0002-6648-5392">orcid</a> ]</p>
 <h1 id="publications">Publications</h1>
 <h2 id="book">Book</h2>
-<p><a href="https://www.ucpress.edu/book/9780520343498/"><em>Reason and Revelation in Byzantine Antioch: The Christian Translation Program of Abdallah ibn al-Fadl</em></a>, Berkeley Series in Postclassical Islamic Scholarship 3 (University of California Press, 2020). [<a href="https://content.ucpress.edu/title/9780520343498/9780520343498_intro.pdf">excerpt</a>]</p>
+<p><a href="https://www.ucpress.edu/book/9780520343498/"><em>Reason and
+Revelation in Byzantine Antioch: The Christian Translation Program of
+Abdallah ibn al-Fadl</em></a>, Berkeley Series in Postclassical Islamic
+Scholarship 3 (University of California Press, 2020). [<a
+href="https://content.ucpress.edu/title/9780520343498/9780520343498_intro.pdf">excerpt</a>]</p>
 <h2 id="articles-and-book-chapters">Articles and Book Chapters</h2>
 <h3 id="forthcoming">forthcoming</h3>
 <p>“Byzantine Engagement with Islamicate Alchemy.”</p>
 <blockquote>
-<p><em>Isis: A Journal of the History of Science Society</em> (forthcoming).</p>
+<p><em>Isis: A Journal of the History of Science Society</em>
+(forthcoming).</p>
 </blockquote>
-<p>“Heretics, Dissidents, and Society: Narrating the Trial of John bar ʿAbdun.”</p>
+<p>“Heretics, Dissidents, and Society: Narrating the Trial of John bar
+ʿAbdun.”</p>
 <blockquote>
 <p><em>Dumbarton Oaks Papers</em> 76 (forthcoming 2022).</p>
 </blockquote>
-<p>“Islamicate Alchemy in Greek Letters on the First Page of <em>Marcianus graecus</em> 299.”</p>
+<p>“Islamicate Alchemy in Greek Letters on the First Page of
+<em>Marcianus graecus</em> 299.”</p>
 <blockquote>
-<p><em>Byzantinische Zeitschrift</em> 115.1 (forthcoming April 2022).</p>
+<p><em>Byzantinische Zeitschrift</em> 115.1 (forthcoming April
+2022).</p>
 </blockquote>
-<p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of Chioniades on John of Damascus.”</p>
+<p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of
+Chioniades on John of Damascus.”</p>
 <blockquote>
-<p>In <em>The Diagram Paradigm: Cross-Cultural Approaches</em>, ed. Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC: Dumbarton Oaks, forthcoming 2022).</p>
+<p>In <em>The Diagram Paradigm: Cross-Cultural Approaches</em>,
+ed. Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC:
+Dumbarton Oaks, forthcoming 2022).</p>
 </blockquote>
-<p>“Writing and Reading Greek on the Pages of Arabic Translations of Byzantine Christian Classics.”</p>
+<p>“Writing and Reading Greek on the Pages of Arabic Translations of
+Byzantine Christian Classics.”</p>
 <blockquote>
-<p>In <em>Language Multiplicity in Byzantium and Beyond</em>, ed. Claudia Rapp, Emilio Bonfiglio, and Ekaterini Mitsiou (Vienna University Press through Vandenhoeck &amp; Ruprecht, forthcoming). [<a href="https://doi.org/10.5281/zenodo.5149056">preprint</a>]</p>
+<p>In <em>Language Multiplicity in Byzantium and Beyond</em>,
+ed. Claudia Rapp, Emilio Bonfiglio, and Ekaterini Mitsiou (Vienna
+University Press through Vandenhoeck &amp; Ruprecht, forthcoming). [<a
+href="https://doi.org/10.5281/zenodo.5149056">preprint</a>]</p>
 </blockquote>
 <h3 id="section">2021</h3>
 <p>“A Greek Alchemical Epigram in Its Middle Byzantine Context.”</p>
 <blockquote>
-<p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (2020; published May 2021): 1–36. [<a href="https://www.ingentaconnect.com/contentone/warburg/jwci/2020/00000083/00000001/art00002">pub</a>]</p>
+<p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (2020;
+published May 2021): 1–36. [<a
+href="https://www.ingentaconnect.com/contentone/warburg/jwci/2020/00000083/00000001/art00002">pub</a>]</p>
 </blockquote>
-<p>“Like a Runaway Slave: The Discourse of an Eighth-Century Muslim Ascetic.”</p>
+<p>“Like a Runaway Slave: The Discourse of an Eighth-Century Muslim
+Ascetic.”</p>
 <blockquote>
-<p><em>Journal of Near Eastern Studies</em> 80.1 (2021): 143–166. [<a href="https://www.journals.uchicago.edu/doi/10.1086/712785">pub</a>]</p>
+<p><em>Journal of Near Eastern Studies</em> 80.1 (2021): 143–166. [<a
+href="https://www.journals.uchicago.edu/doi/10.1086/712785">pub</a>]</p>
 </blockquote>
 <h3 id="section-1">2020</h3>
-<p>“Mathematical Philology in the Treatise on Double False Position in an Arabic Manuscript at Columbia University.”</p>
+<p>“Mathematical Philology in the Treatise on Double False Position in
+an Arabic Manuscript at Columbia University.”</p>
 <blockquote>
-<p><em>Philological Encounters</em> 5.3–4 (2020): 308–352. [<a href="https://doi.org/10.1163/24519197-BJA10007">pub</a>|<a href="https://zenodo.org/record/4408536">postprint</a>|<a href="https://hcommons.org/deposits/item/hc:33383/">PDF</a>]</p>
+<p><em>Philological Encounters</em> 5.3–4 (2020): 308–352. [<a
+href="https://doi.org/10.1163/24519197-BJA10007">pub</a>|<a
+href="https://zenodo.org/record/4408536">postprint</a>|<a
+href="https://hcommons.org/deposits/item/hc:33383/">PDF</a>]</p>
 </blockquote>
 <p>“Framing a Middle Byzantine Alchemical Codex.”</p>
 <blockquote>
-<p><em>Dumbarton Oaks Papers</em> 73 (2019; published May 2020): 69–102. [<a href="https://www.jstor.org/stable/26955172">pub</a>|<a href="https://hcommons.org/deposits/item/hc:31587/">PDF</a>]</p>
+<p><em>Dumbarton Oaks Papers</em> 73 (2019; published May 2020): 69–102.
+[<a href="https://www.jstor.org/stable/26955172">pub</a>|<a
+href="https://hcommons.org/deposits/item/hc:31587/">PDF</a>]</p>
 </blockquote>
 <h3 id="section-2">2019</h3>
-<p>“A Re-Translation of Basil’s Hexaemeral Homilies by ʿAbdallāh ibn al-Faḍl of Antioch.”</p>
+<p>“A Re-Translation of Basil’s Hexaemeral Homilies by ʿAbdallāh ibn
+al-Faḍl of Antioch.”</p>
 <blockquote>
-<p>Chapter 7 in <em>Patristic Literature in Arabic Translations</em>, ed. Barbara Roggema and Alexander Treiger, Arabic Christianity: Texts and Studies 2 (Leiden: Brill, 2020; published October 2019), 198–240. [<a href="https://doi.org/10.1163/9789004415041_009">pub</a>|<a href="https://hcommons.org/deposits/item/hc:32967/">PDF</a>]</p>
+<p>Chapter 7 in <em>Patristic Literature in Arabic Translations</em>,
+ed. Barbara Roggema and Alexander Treiger, Arabic Christianity: Texts
+and Studies 2 (Leiden: Brill, 2020; published October 2019), 198–240.
+[<a href="https://doi.org/10.1163/9789004415041_009">pub</a>|<a
+href="https://hcommons.org/deposits/item/hc:32967/">PDF</a>]</p>
 </blockquote>
 <h3 id="section-3">2017</h3>
 <p>“Being a Sabian at Court in Tenth-Century Baghdad.”</p>
 <blockquote>
-<p><em>Journal of the American Oriental Society</em> 137.2 (2017): 253–277. [<a href="https://www.jstor.org/stable/10.7817/jameroriesoci.137.2.0253">pub</a>|<a href="https://hcommons.org/deposits/item/hc:15783/">PDF</a>]</p>
+<p><em>Journal of the American Oriental Society</em> 137.2 (2017):
+253–277. [<a
+href="https://www.jstor.org/stable/10.7817/jameroriesoci.137.2.0253">pub</a>|<a
+href="https://hcommons.org/deposits/item/hc:15783/">PDF</a>]</p>
 </blockquote>
 <h3 id="section-4">2013</h3>
-<p>“The Crossing Paths of Greek and Persian Knowledge in the 9th-century Arabic ‘Book of Degrees.’”</p>
+<p>“The Crossing Paths of Greek and Persian Knowledge in the 9th-century
+Arabic ‘Book of Degrees.’”</p>
 <blockquote>
-<p>In <em>Le vie del sapere in ambito siro-mesopotamico dal III al IX secolo</em>, ed. Carla Noce, Massimo Pampaloni, and Claudia Tavolieri, Orientalia Christiana Analecta 293 (Rome: Pontificio Istituto Orientale, 2013), 279–303. [<a href="https://hcommons.org/deposits/item/hc:16045/">PDF</a>]</p>
+<p>In <em>Le vie del sapere in ambito siro-mesopotamico dal III al IX
+secolo</em>, ed. Carla Noce, Massimo Pampaloni, and Claudia Tavolieri,
+Orientalia Christiana Analecta 293 (Rome: Pontificio Istituto Orientale,
+2013), 279–303. [<a
+href="https://hcommons.org/deposits/item/hc:16045/">PDF</a>]</p>
 </blockquote>
 <h3 id="section-5">2012</h3>
 <p>“Al-Mansur and the Critical Ambassador.”</p>
 <blockquote>
-<p><em>Bulletin d’études orientales</em> 60 (2011; published May 2012): 145–160. [<a href="https://doi.org/10.4000/beo.406">pub</a>|<a href="https://hcommons.org/deposits/item/hc:21715/">PDF</a>]</p>
+<p><em>Bulletin d’études orientales</em> 60 (2011; published May 2012):
+145–160. [<a href="https://doi.org/10.4000/beo.406">pub</a>|<a
+href="https://hcommons.org/deposits/item/hc:21715/">PDF</a>]</p>
 </blockquote>
 <h2 id="encyclopedia-entries">Encyclopedia entries</h2>
 <p>“Basileios von Emesa”; “Theophilos von Edessa.”</p>
 <blockquote>
-<p>In <em>Lexikon byzantinischer Autoren</em>, ed. A. Riehle and M. Grünbart (Berlin: Akademie Verlag, forthcoming).</p>
+<p>In <em>Lexikon byzantinischer Autoren</em>, ed. A. Riehle and M.
+Grünbart (Berlin: Akademie Verlag, forthcoming).</p>
 </blockquote>
 <h2 id="book-reviews">Book Reviews</h2>
-<p>Andrea De Giorgi, <em>Ancient Antioch from the Seleucid Era to the Islamic Conquest</em> (Cambridge University Press, 2016).</p>
+<p>Andrea De Giorgi, <em>Ancient Antioch from the Seleucid Era to the
+Islamic Conquest</em> (Cambridge University Press, 2016).</p>
 <blockquote>
-<p>“The Paths and Memories Tying Antioch to Its Hinterland,” <em>Journal of Roman Archaeology</em> 30 (2017): 810–817. [<a href="https://doi.org/10.1017/S1047759400074845">pub</a>]</p>
+<p>“The Paths and Memories Tying Antioch to Its Hinterland,” <em>Journal
+of Roman Archaeology</em> 30 (2017): 810–817. [<a
+href="https://doi.org/10.1017/S1047759400074845">pub</a>]</p>
 </blockquote>
-<p>Timothy Power, <em>The Red Sea from Byzantium to the Caliphate: AD 500–1000</em> (American University in Cairo Press, 2012).</p>
+<p>Timothy Power, <em>The Red Sea from Byzantium to the Caliphate: AD
+500–1000</em> (American University in Cairo Press, 2012).</p>
 <blockquote>
-<p>“In Mecca’s Backyard,” <em>Marginalia Review of Books</em>, April 29, 2014. [<a href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open</a>]</p>
+<p>“In Mecca’s Backyard,” <em>Marginalia Review of Books</em>, April 29,
+2014. [<a
+href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open</a>]</p>
 </blockquote>
 <hr />
 <p><small>[<em>Last updated January 2022.</em>]</small></p>
