--- a/index.html
+++ b/index.html
@@ -53,13 +53,6 @@ href="https://content.ucpress.edu/title/9780520343498/9780520343498_intro.pdf">e
 <blockquote>
 <p><em>Dumbarton Oaks Papers</em> 76 (forthcoming 2022).</p>
 </blockquote>
-<p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of
-Chioniades on John of Damascus.”</p>
-<blockquote>
-<p>In <em>The Diagram as Paradigm: Cross-Cultural Approaches</em>,
-ed. Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC:
-Dumbarton Oaks, forthcoming 2022).</p>
-</blockquote>
 <p>“Writing and Reading Greek on the Pages of Arabic Translations of
 Byzantine Christian Classics.”</p>
 <blockquote>
@@ -69,6 +62,14 @@ University Press through Vandenhoeck &amp; Ruprecht, forthcoming). [<a
 href="https://doi.org/10.5281/zenodo.5149056">preprint</a>]</p>
 </blockquote>
 <h3 id="section">2022</h3>
+<p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of
+Chioniades on John of Damascus.”</p>
+<blockquote>
+<p>In <em>The Diagram as Paradigm: Cross-Cultural Approaches</em>,
+ed. Jeffrey Hamburger, David Roxburgh, and Linda Safran (Washington, DC:
+Dumbarton Oaks, 2022). [<a
+href="https://www.hup.harvard.edu/catalog.php?isbn=9780884024866">pub</a>]</p>
+</blockquote>
 <p>“Islamicate Alchemy in Greek Letters on the First Page of
 <em>Marcianus graecus</em> 299.”</p>
 <blockquote>
