--- a/index.html
+++ b/index.html
@@ -43,10 +43,15 @@ Scholarship 3 (University of California Press, 2020). [<a
 href="https://content.ucpress.edu/title/9780520343498/9780520343498_intro.pdf">excerpt</a>]</p>
 <h2 id="articles-and-book-chapters">Articles and Book Chapters</h2>
 <h3 id="forthcoming">forthcoming</h3>
+<p>“Hierotechnicians by Name and Their Middle Byzantine Fame.”</p>
+<blockquote>
+<p><em>Journal of Late Antique, Islamic and Byzantine Studies</em> 1
+(forthcoming 2022).</p>
+</blockquote>
 <p>“Byzantine Engagement with Islamicate Alchemy.”</p>
 <blockquote>
-<p><em>Isis: A Journal of the History of Science Society</em>
-(forthcoming).</p>
+<p><em>Isis: A Journal of the History of Science Society</em> 113.3
+(forthcoming 2022).</p>
 </blockquote>
 <p>“Heretics, Dissidents, and Society: Narrating the Trial of John bar
 ʿAbdun.”</p>
@@ -162,6 +167,6 @@ href="https://doi.org/10.1017/S1047759400074845">pub</a>]</p>
 href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open</a>]</p>
 </blockquote>
 <hr />
-<p><small>[<em>Last updated April 2022.</em>]</small></p>
+<p><small>[<em>Last updated June 2022.</em>]</small></p>
 </body>
 </html>
