--- a/index.html
+++ b/index.html
@@ -80,15 +80,19 @@ href="https://hcommons.org/deposits/item/hc:47227/">PDF</a>]</p>
 <em>Marcianus graecus</em> 299.”</p>
 <blockquote>
 <p><em>Byzantinische Zeitschrift</em> 115.1 (2022): 341–349. [<a
-href="https://doi.org/10.1515/bz-2022-0012">pub</a>]</p>
+href="https://doi.org/10.1515/bz-2022-0012">pub</a>|PDF <a
+href="https://hcommons.org/deposits/item/hc:45383/">starting
+2023-04-11</a>]</p>
 </blockquote>
 <h3 id="section-1">2021</h3>
 <p>“A Greek Alchemical Epigram in Its Middle Byzantine Context.”</p>
 <blockquote>
 <p><em>Journal of the Warburg and Courtauld Institutes</em> 83 (2020;
 published May 2021): 1–36. [<a
-href="https://doi.org/10.1086/JWCI83010001">pub</a>]</p>
+href="https://doi.org/10.1086/JWCI83010001">pub freely
+available</a>]</p>
 </blockquote>
+<!--available on HC starting 2023-10-14-->
 <p>“Like a Runaway Slave: The Discourse of an Eighth-Century Muslim
 Ascetic.”</p>
 <blockquote>
@@ -168,6 +172,6 @@ href="https://doi.org/10.1017/S1047759400074845">pub</a>]</p>
 href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open</a>]</p>
 </blockquote>
 <hr />
-<p><small>[<em>Last updated June 2022.</em>]</small></p>
+<p><small>[<em>Last updated July 2022.</em>]</small></p>
 </body>
 </html>
